tests/ui/server_send/error/has-too-many-arguments.rs
use hyper_tracing_attributes::server_send;

#[allow(unused_braces)]
#[server_send(level=trace, name="B", skip="self", target="bulls-eye")]
fn f(a: u32) -> u32 {a}

fn main() {}
